microservices/hw-k8s/manifests.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-health
  namespace: test
  labels:
    app: nginx-health
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-health
  template:
    metadata:
      labels:
        app: nginx-health
    spec:
      containers:
        - name: nginx-health
          image: ksarien/otus-hm2:2.0
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-health-ingress
  namespace: test
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Exact
            backend:
              service:
                name: nginx-health-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-health-ingress-regex
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/([\w]+)/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-health-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-health-service
  namespace: test
spec:
  selector:
    app: nginx-health
  ports:
    - port: 80
      targetPort: 8000
